cheges are made

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
-<app-banner></app-banner>
+<!-- <app-header></app-header> -->
+<!-- <app-banner></app-banner> -->
 
 <router-outlet></router-outlet>
