--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<!-- <app-banner></app-banner> -->
+<app-header></app-header>
+<app-banner></app-banner>
 <app-product></app-product>
 <app-footer></app-footer>
