--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,1 +1,18 @@
-<p>checkout works!</p>
+<div class="checkout">
+    <div class="checkout_left">
+        <div class="checkout_empty">
+            <h2>Your shopping basket is empty</h2>
+            <p>You have no items in your basket</p>
+
+        </div>
+        <div class="checkout_not_empty">
+            <p><strong>Shopping Cart</strong></p>
+            <app-checkout-product></app-checkout-product>
+        </div>
+
+    </div>
+    <div class="checkout_right">
+     <app-checkout-subtotal></app-checkout-subtotal>
+
+    </div>
+</div>
